--- a/client/src/css/homepage.css
+++ b/client/src/css/homepage.css
@@ -7,25 +7,64 @@ body {
   margin: 0px;
 }
 
-ul {
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 0px;
-}
-
 .h1, .h2, .h3, .h4, .h5, .h6 {
   display: inline-block;
-  margin-block-start: 0em;
+  margin-block-start: .0em;
   margin-block-end: 0em;
-  font-weight: bold;
+  font-weight: normal;
+}
+
+.h1-block, .h2-block, .h3-block, .h4-block, .h5-block, .h6-block {
+  display: block;
+  font-weight: normal;
+}
+
+.h1-underline, .h2-underline, .h3-underline, .h4-underline, .h5-underline, .h6-underline {
+  display: block;
+  border-bottom: 1px solid #ddd;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mt-30 {
+  margin-top: 30px;
+}
+
+.mt-40 {
+  margin-top: 40px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.col-black {
+  color: #000;
+}
+
+.col-gray {
+  color: #777;
+}
+
+.al-center {
+  text-align: center;
 }
 
 .table-basic {
-  border: 2px solid #dedede;
+  border: 2px solid #ccc;
   border-spacing: 0px;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .table-basic thead {
@@ -34,7 +73,7 @@ ul {
 
 .table-basic thead th {
   padding: 0.5rem 1rem;
-  border-right: 2px solid #dedede;
+  border-right: 2px solid #ccc;
   text-align: left;
 }
 
@@ -44,8 +83,8 @@ ul {
 
 .table-basic tbody td {
   padding: 0.5rem 1rem;
-  border-right: 2px solid #dedede;
-  border-top: 2px solid #dedede;
+  border-right: 2px solid #ccc;
+  border-top: 2px solid #ccc;
 }
 
 .table-basic tbody td:last-child {
@@ -53,7 +92,7 @@ ul {
 }
 
 .table-basic tr {
-  border-bottom: 2px solid #dedede;
+  border-bottom: 2px solid #ccc;
 }
 
 .table-basic tr:nth-child(2n) {
@@ -61,11 +100,12 @@ ul {
 }
 
 .table-stripe {
-  border: 2px solid #dedede;
+  border: 2px solid #ccc;
   border-right: none;
   border-left: none;
   border-spacing: 0px;
   box-sizing: border-box;
+  width: 100%;
 }
 
 .table-stripe thead {
@@ -83,7 +123,7 @@ ul {
 
 .table-stripe tbody td {
   padding: 0.5rem 1rem;
-  border-top: 2px solid #dedede;
+  border-top: 2px solid #ccc;
 }
 
 .table-stripe tbody td:last-child {
@@ -91,7 +131,7 @@ ul {
 }
 
 .table-stripe tr {
-  border-bottom: 2px solid #dedede;
+  border-bottom: 2px solid #ccc;
 }
 
 .table-stripe tr:nth-child(2n) {
@@ -103,12 +143,14 @@ ul {
 }
 
 .btn {
-  padding: .1rem .4rem;
+  padding: .2rem .5rem;
   font-size: 1em;
   border-radius: 5px;
   border: 2px solid transparent;
   outline: none;
   display: inline-block;
+  margin-right: .8rem;
+  text-decoration: none;
 }
 
 .btn-primary {
@@ -120,6 +162,17 @@ ul {
 .btn-primary:hover {
   background-color: #0069d9;
   border-color: #0069d9;
+}
+
+.btn-success {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.btn-success:hover {
+  background-color: #218838;
+  border-color: #218838;
 }
 
 .card {
@@ -137,11 +190,46 @@ ul {
   padding: .8rem 2rem;
 }
 
+.card-item {
+  border-bottom: 1px solid #ccc;
+  padding: .8rem 0rem;
+}
+
+.card-item:last-child {
+  border: none;
+}
+
 .list {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   margin: 0 .2rem;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 1rem;
+}
+
+.list:last-child {
+  border: none;
+  margin-bottom: 0rem;
+}
+
+.list a {
+  display: block;
+  text-decoration: none;
+  color: #007bff;
+}
+
+.list a:hover {
+  background-color: #efefef;
+  color: #0069d9;
+}
+
+.list li {
+  border-bottom: 2px solid #ccc;
+}
+
+.list li:last-child {
+  border-bottom: none;
 }
 
 .list-title {
@@ -150,23 +238,91 @@ ul {
 }
 
 .list ul {
+  padding-inline-start: 0px;
   list-style: none;
-  border: 2px solid #dedede;
+  border: 2px solid #ccc;
   border-radius: 5px;
 }
 
 .list-item {
   padding: 0.5rem 1rem;
-  border-bottom: 2px solid #dedede;
 }
 
-.list-item:last-child {
+.list-stripe {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin: 0 .2rem;
+}
+
+.list-stripe:last-child {
   border-bottom: none;
+}
+
+.list-stripe-title {
+  margin-left: .8rem;
+  margin-bottom: .5rem;
+}
+
+.list-stripe-item {
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid #ccc;
 }
 
 .flex-block {
   display: flex;
   justify-content: space-between;
+}
+
+.form {
+  max-width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-item {
+  margin-bottom: 1.8rem;
+}
+
+.label-block {
+  display: block;
+}
+
+.input-label {
+  font-size: 1.3em;
+  margin-bottom: .5rem;
+  font-weight: normal;
+  display: block;
+}
+
+.input-text {
+  font-size: 1em;
+  padding: .3rem .5rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  display: block;
+  width: 100%;
+}
+
+.input-textarea {
+  font-size: 1em;
+  padding: .3rem .5rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  display: block;
+  width: 100%;
+  height: 5rem;
+  resize: vertical;
+}
+
+.input-select {
+  font-size: 1em;
+  padding: .3rem .5rem;
+  display: inline-block;
+  height: 2rem;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ccc;
 }
 
 .header nav {
@@ -184,8 +340,19 @@ ul {
   font-size: 1.2em;
 }
 
+.header nav .logo a {
+  color: #fff;
+  text-decoration: none;
+}
+
 .header nav .menu {
   display: inline-flex;
+  list-style-type: disc;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px;
 }
 
 .header nav .menu li {
@@ -203,7 +370,7 @@ ul {
   color: white;
 }
 
-.header .jambotron {
+.jumbotron {
   color: #fff;
   font-size: 1.8em;
   display: flex;
@@ -218,7 +385,7 @@ ul {
   justify-content: space-between;
   padding: .2rem 1.8rem;
   border-top: 2px solid #ddd;
-  margin: .5rem .5rem;
+  margin: 2rem .5rem 0rem;
   font-size: small;
   color: #777;
 }
@@ -237,4 +404,14 @@ ul {
   margin-right: auto;
   margin-top: 20px;
   align-items: center;
+}
+
+.container .content-title {
+  text-align: center;
+}
+
+.container .content-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
