--- a/client/src/sass/homepage.scss
+++ b/client/src/sass/homepage.scss
@@ -7,6 +7,8 @@ $primary-hover: #0069d9;
 $light-gray: #efefef;
 $success: #28a745;
 $success-hover: #218838;
+$info: #17a2b8;
+$info-hover: #138496;
 
 // font-color
 $nav-link-color: rgba(255, 255, 255, 0.7);
@@ -183,6 +185,15 @@ body {
         &:hover{
             background-color: $success-hover;
             border-color: $success-hover;
+        }
+    }
+    &-info {
+        color: #fff;
+        background-color: $info;
+        border-color: $info;
+        &:hover{
+            background-color: $info-hover;
+            border-color: $info-hover;
         }
     }
 }
